using retrofit and gson

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="msg_server_error">Server error</string>
 
     <!-- api -->
-    <string name="api_key">api_key</string>
+    <string name="api_key">c4b2831b4d3c932c6cde4ac5eae5d616</string>
     <string name="api_poster_default_size">w154</string>
 
     <!-- labels -->
