--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
     <string name="app_name">PopularMoviesHB</string>
 
     <string name="hello_world">Hello world!</string>
@@ -7,7 +7,7 @@
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_detail">Details</string>
 
-    <string name="pref_sorting_key" translatable="false">sorting</string>
+    <string name="pref_sorting_key" translatable="false">sorting_type</string>
     <string name="pref_sorting_label">Sort order</string>
 
     <string name="msg_loading">loading...</string>
@@ -18,14 +18,46 @@
     <string name="pref_sorting_label_rating">Highest-rated first</string>
     <string name="pref_sorting_value_popular" translatable="false">popular</string>
     <string name="pref_sorting_value_rating" translatable="false">top_rated</string>
-    <string name="pref_sorting_default_value" translatable="false">popular</string>
+    <string name="pref_sorting_default_value" translatable="false">popularity</string>
     <string name="msg_server_error">Server error</string>
+
+    <string name="prefs.notification.key" translatable="false">notification</string>
+    <string name="prefs.notification.title">Notifications</string>
+    <string name="prefs.notification.summary.off">Don\'t show notifications</string>
+    <string name="prefs.notification.summary.on">Show notifications</string>
+    <string name="prefs.notification.last.key">last_notification</string>
+
+    <string name="notification.content">Did you check the new movies today?</string>
 
     <!-- api -->
     <string name="api_key">c4b2831b4d3c932c6cde4ac5eae5d616</string>
     <string name="api_poster_default_size">w154</string>
+    <string name="api_base_url">http://api.themoviedb.org/3</string>
+    <string name="api.image.size.default" translatable="false">w185</string>
+    <string name="api.image.size.medium" translatable="false">w342</string>
 
     <!-- labels -->
     <string name="label_movie_release_date">Release date:</string>
+
+    <!-- syncing -->
+    <string name="content.authority">com.himanshubahuguna.android.popularmovieshb</string>
+    <string name="sync.account.type">com.foo</string>
+
+    <!-- Menu entries -->
+    <string name="menu.settings">Settings</string>
+    <string name="menu.favorites">Favorites</string>
+
+    <!-- String formats for detailed view -->
+    <string name="format.ratings"><xliff:g id="rating">%.1f</xliff:g>/10 (<xliff:g id="votes">%d</xliff:g> votes)</string>
+    <string name="format.release_date">Released on <xliff:g id="date">%s</xliff:g></string>
+
+    <!-- Activity default titles -->
+    <string name="activity.details.title">Details</string>
+    <string name="activity.settings.title">Settings</string>
+    <string name="activity.favorites.title">Favorited Movies</string>
+
+    <string name="details.button.favorite.add">Mark as favorite</string>
+    <string name="details.button.favorite.remove">Unmark as favorite</string>
+    <string name="details.trailers.header">Trailers: </string>
 
 </resources>
